--- a/css/sleep.css
+++ b/css/sleep.css
@@ -3,13 +3,16 @@ body {
   color: white;
   display: flex;
   justify-content: center;
+  display: -webkit-box;
+  display: flex;
+  overflow: hidden;
   background: rgb(11,7,80);
   background-image: url("../nightsky.png"), radial-gradient(circle, rgba(11,7,80,1) 0%, rgba(29,29,66,1) 49%, rgba(2,51,61,1) 100%);
 }
 .container{
   margin-top: 100px;
-  width: 384px;
-  height: 585px;
+  width: 400px;
+  height: 600px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -69,4 +72,214 @@ font-size: 38px;
   left: 5%;
   position: relative;
 font-size: 12px;
+}
+
+
+.sky {
+position: absolute;
+left: 35%;
+width: 80%;
+bottom: 20%;
+height: 100%;
+-webkit-transform: rotateZ(45deg);
+transform: rotateZ(45deg);
+}
+.sky2 {
+position: absolute;
+right: 35%;
+bottom: 20%;
+width: 100%;
+height: 100%;
+-webkit-transform: rotateZ(45deg);
+transform: rotateZ(45deg);
+}
+
+.star {
+position: absolute;
+left: 50%;
+top: 50%;
+height: 2px;
+border-radius: 885px;
+background: linear-gradient(-45deg,
+	#eef0f5, rgba(0, 0, 255, 0));
+
+-webkit-filter: drop-shadow(0 0 6px #eef1f8);
+filter: drop-shadow(0 0 6px #d7dff0);
+-webkit-animation: tail 3000ms ease-in-out infinite,
+	shooting 3000ms ease-in-out infinite;
+animation: tail 3000ms ease-in-out infinite,
+	shooting 3000ms ease-in-out infinite;
+}
+
+.star::before,.star::after {
+content: "";
+position: absolute;
+top: calc(50% - 1px);
+right: 0;
+height: 2px;
+background: linear-gradient(
+	-45deg,
+	rgba(0, 0, 255, 0),
+	#eaeef8,
+	rgba(0, 0, 255, 0)
+);
+-webkit-transform: translateX(50%) rotateZ(45deg);
+transform: translateX(50%) rotateZ(45deg);
+border-radius: 100%;
+-webkit-animation: shining 3000ms ease-in-out infinite;
+animation: shining 3000ms ease-in-out infinite;
+}
+.star::after {
+-webkit-transform: translateX(50%) rotateZ(-45deg);
+transform: translateX(50%) rotateZ(-45deg);
+}
+
+.star:nth-child(1) {
+top: calc(50% - -119px);
+left: calc(50% - 43px);
+-webkit-animation-delay: 4000ms;
+animation-delay: 4000ms;
+}
+.star:nth-child(1)::before,
+.star:nth-child(1)::after {
+-webkit-animation-delay: 4000ms;
+animation-delay: 4000ms;
+}
+.star:nth-child(2) {
+top: calc(50% - -43px);
+left: calc(50% - 37px);
+-webkit-animation-delay: 5000ms;
+animation-delay: 5000ms;
+}
+.star:nth-child(2)::before,
+.star:nth-child(2)::after {
+-webkit-animation-delay: 5000ms;
+animation-delay: 5000ms;
+}
+.star:nth-child(3) {
+top: calc(50% - -40px);
+left: calc(50% - 222px);
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+.star:nth-child(3)::before,
+.star:nth-child(3)::after {
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+.star:nth-child(4) {
+top: calc(50% - -29px);
+left: calc(50% - 113px);
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+.star:nth-child(4)::before,
+.star:nth-child(4)::after {
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+.star:nth-child(5) {
+top: calc(50% - 146px);
+left: calc(50% - 112px);
+-webkit-animation-delay: 3000ms;
+animation-delay: 3000ms;
+}
+.star:nth-child(5)::before,
+.star:nth-child(5)::after {
+-webkit-animation-delay: 3000ms;
+animation-delay: 3000ms;
+}
+.star:nth-child(6) {
+top: calc(50% - -108px);
+left: calc(50% - 160px);
+-webkit-animation-delay: 3000ms;
+animation-delay: 3000ms;
+}
+.star:nth-child(6)::before,
+.star:nth-child(6)::after {
+-webkit-animation-delay: 3000ms;
+animation-delay: 3000ms;
+}
+.star:nth-child(7) {
+top: calc(50% - 52px);
+left: calc(50% - 72px);
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+.star:nth-child(7)::before,
+.star:nth-child(7)::after {
+-webkit-animation-delay: 7000ms;
+animation-delay: 7000ms;
+}
+
+@keyframes tail {
+0% {
+	width: 0;
+}
+30% {
+	width: 100px;
+}
+100% {
+	width: 0;
+}
+}
+
+
+@keyframes shining {
+0% {
+	width: 0;
+}
+50% {
+	width: 30px;
+}
+100% {
+	width: 0;
+}
+}
+
+@-webkit-keyframes shining {
+0% {
+	width: 0;
+}
+50% {
+	width: 30px;
+}
+100% {
+	width: 0;
+}
+}
+
+@-webkit-keyframes tail {
+0% {
+	width: 0;
+}
+30% {
+	width: 100px;
+}
+100% {
+	width: 0;
+}
+}
+
+@-webkit-keyframes shooting {
+0% {
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+}
+100% {
+	-webkit-transform: translateX(270px);
+	transform: translateX(270px);
+}
+}
+
+
+@keyframes shooting {
+0% {
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+}
+100% {
+	-webkit-transform: translateX(270px);
+	transform: translateX(270px);
+}
 }
